# libatlas

./: .gitignore  CMakeLists.txt  README.md  libatlasConfig.cmake.in
docs/: architecture.md  asset_store.md  extraction_pipeline.md  integration.md  repacking.md
examples/: CMakeLists.txt  basic_pipeline.cpp
include/libatlas/: extraction.hpp  geometry.hpp  identity.hpp  image.hpp  image_io.hpp  libatlas.hpp  packing.hpp  result.hpp  similarity.hpp  workflow.hpp
src/: extraction.cpp  identity.cpp  image.cpp  image_io.cpp  packing.cpp  similarity.cpp  workflow.cpp
tests/: CMakeLists.txt  test_core.cpp  test_harness.hpp  test_main.cpp  test_utils.hpp
tests/Images_files/: B5ColourSelector_0.dds  B5ComponentUnity_0.dds  B5ComponentUnity_1.dds  B5ControllerButtons_0.dds  B5CrashedHud_0.dds  B5CustomComponentTexture_0.dds  B5EATraxInGameComponent_0.dds  B5FriendListChangeIcon_0.dds  B5HudMessage_0.dds  B5MapCursor_0.dds  B5MedalIcon_0.dds  B5MenuItem_0.dds  B5MenuToggle_0.dds  B5MenuToggle_1.dds  B5MugShot_0.dds  B5NorthIndicatorComponent_0.dds  B5OnlineInviteComponent_0.dds  B5PositionTableComponent_0.dds  B5RaceEventInfo_0.dds  B5RaceHud_0.dds  B5RaceHud_1.dds  B5RoadRuleComponent_0.dds  B5RoadRulerIcon_0.dds  B5RoadSigns_0.dds  B5SatNavComponent_0.dds  B5SatNavComponent_1.dds  B5SaveIconComponent_0.tga  BoostMessage_0.dds  BrnPreRaceFlyBy_0.dds  CrashNavLegend_0.dds  CrashNavPanel_0.dds  CrashNavTitleBar_0.dds  CrashNavTitleBar_1.dds  DistrictIcon_0.dds  Overlays_0.dds  Overlays_1.dds  SatNavStatic_0.dds
tools/: CMakeLists.txt  asset_store.cpp  asset_store.hpp  libatlas_tool.cpp  run_fixture_pipeline.py
tools/fixture_pipeline_ui/: README.md  main.py
